--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "~4.1.0",
     "react-native-swiper": "^1.6.0",
+    "react-native-video": "^6.8.2",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.2",
-    "tailwindcss": "^3.4.16"
+    "react-native-webview": "^13.12.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -56,6 +56,7 @@
     "jest-expo": "~52.0.2",
     "prettier": "^3.4.2",
     "react-test-renderer": "18.3.1",
+    "tailwindcss": "^3.4.16",
     "typescript": "^5.3.3"
   },
   "private": true
